--- a/news_aggregator/app/backend/package.json
+++ b/news_aggregator/app/backend/package.json
@@ -7,13 +7,13 @@
     "test": "jest --watchAll --detectOpenHandles",
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
-     "postinstall": "npm rebuild bcrypt --build-from-source"
+    "postinstall": "npm rebuild bcrypt --build-from-source"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
