--- a/news_aggregator/app/news_aggregaator/package.json
+++ b/news_aggregator/app/news_aggregaator/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
@@ -27,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.1.0",
     "nodemailer": "^6.9.7",
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
